@@ -30,6 +30,7 @@ type programTree struct {
 	mode            Mode
 	unknownMode     UnknownMode // Unknown option mode
 	requireOrder    bool        // stop parsing args as soon as an unknown is found
+	skipOptionsCopy bool        // skips copying options from parent to child. Required when doing wrapper commands.
 	Suggestions     []string    // Suggestions used for completions
 
 	mapKeysToLower bool // controls wether or not map keys are normalized to lowercase
